@@ -21,10 +21,13 @@
 #
 # Alpha 0.3 The social update (07/07/2020)
 #
+# Added the _commands command that helps the users know about all the diferent commands
 # Added the _roast command that serves to keep the bot superiority over the humans
 # Added the _random command that sorts a number between 1 and 100
 # Added the _bored command that the bot gives ideas for the humans to entretain themselfs
-# Added the _infected and _deceit commands do call the people of deceit 
+# Added the _infected and _deceit commands do call the people of deceit
+# Added a new trigger word (F) that makes the players pay the respects 
+# Adapted the kick and ban commands to the new server 
 # Resolved the issue that was blocking the jojo and outlander trigger words to run
 # Removed the rune random system from the bot temporary
 # Resolved some bugs regarding case sensitive on oof and trigger words
